<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_movie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_movie"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_movie"
        app:layout_constraintTop_toBottomOf="@id/tv_quantity"
        app:layout_constraintStart_toStartOf="@id/tv_quantity"
        app:layout_constraintEnd_toEndOf="@id/tv_quantity"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>